--- a/src/components/card/card-styles.scss
+++ b/src/components/card/card-styles.scss
@@ -1,9 +1,15 @@
 .title {
   font-size: 24px;
   font-weight: bold;
-  color: red;
+  color: lightcoral;
 }
 
 .subtitle {
-  color: red;
+  color: lightcoral;
+}
+
+.cardContent {
+  margin: 15px;
+  color: pink;
+  font-family: Impact;
 }
