--- a/src/components/card/card-styles.scss
+++ b/src/components/card/card-styles.scss
@@ -1,15 +1,42 @@
+@import '../../styles/settings.scss';
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  height: 230px;
+  width: 17em;
+
+  background-color: $light-gray;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.09);
+  border: solid 1px rgba($border-color, 0.1);
+
+  @media #{$tablet-landscape} {
+    height: 300px;
+    width: initial;
+  }
+}
+
+.data {
+  background-color: $light-gray;
+  overflow: auto;
+  height: 100%;
+}
+
+.contentContainer {
+  padding: 15px 20px;
+  background-color: $white;
+  color: $theme-color;
+  min-height: 90px;
+}
+
 .title {
-  font-size: 24px;
-  font-weight: bold;
-  color: lightcoral;
+  font-size: $font-size;
+  font-weight: $font-weight-bold;
 }
 
 .subtitle {
-  color: lightcoral;
-}
-
-.cardContent {
-  margin: 15px;
-  color: pink;
-  font-family: Impact;
+  color: $theme-color;
+  line-height: $line-height-medium;
 }
