--- a/src/components/bottom-bar/bottom-bar-styles.scss
+++ b/src/components/bottom-bar/bottom-bar-styles.scss
@@ -1,11 +1,7 @@
-@import '../../styles/layout.scss';
+@import '../../styles/settings.scss';
 
 .row {
-  @include row(12);
-
-  @media #{$tablet-portrait} {
-    @include row((4, 8));
-  }
+  width: 100%;
 }
 
 .container {
