--- a/src/components/footer/footer-styles.scss
+++ b/src/components/footer/footer-styles.scss
@@ -1,3 +1,5 @@
+@import '../../styles/settings.scss';
+
 .content {
   width: 100%;
 }
@@ -23,8 +25,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding-top: $gutter-padding;
-  padding-bottom: $gutter-padding;
+  padding-top: 30px;
+  padding-bottom: 30px;
   color: $dark-gray;
   font-weight: $font-weight-semi-bold;
 }
@@ -45,17 +47,12 @@
   }
 }
 
-.partnersContainer {
-  // @include columns('shrink', $gutters: false);
-  // @include xy-gutters($gutter-position:('top', 'bottom'));
-}
-
 .logoContainer {
   width: 120px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin: $logos-top-bottom-margin $gutter-padding $logos-top-bottom-margin 0;
+  margin: 15px 30px 15px 0;
 }
 
 .logo {
