--- a/src/components/switch/switch-styles.scss
+++ b/src/components/switch/switch-styles.scss
@@ -7,18 +7,19 @@ $switch-border-radius: 30px;
   display: inline-flex;
   border: 1px solid $gray;
   color: $gray;
+  padding: 0;
 }
 
 .option {
   text-transform: uppercase;
   font-family: $font-family-1;
   font-size: 13px;
-  padding: 15px;
+  padding: 15px 25px 15px 25px;
   letter-spacing: 1px;
-  margin: {
-    left: 12px;
-    right: 12px;
-  }
+}
+
+.radioInput {
+  display: none;
 }
 
 .checkedOption {
