Fix icon fill, font and accordion first click

--- a/src/components/icon/icon-styles.scss
+++ b/src/components/icon/icon-styles.scss
@@ -1,7 +1,9 @@
+@import '../../styles/settings.scss';
+
 .icon {
   width: 15px;
   height: 15px;
-  fill: green;
+  fill: $theme-color;
 }
 
 .cursor {
