--- a/src/components/multiselect/multiselect-styles.scss
+++ b/src/components/multiselect/multiselect-styles.scss
@@ -1,7 +1,7 @@
 @import '../../styles/settings.scss';
 
 .label {
-  display: block;
+  display: inline-block;
   font-size: $font-size-s;
   font-weight: $font-weight-bold;
   color: $theme-color;
