--- a/src/components/charts/tooltip-chart/tooltip-chart-styles.scss
+++ b/src/components/charts/tooltip-chart/tooltip-chart-styles.scss
@@ -53,6 +53,11 @@
   display: block;
 }
 
+.labelIcon {
+  margin-left: -2px;
+  margin-right: 4px;
+}
+
 .labelName {
   color: $theme-color;
   margin: 0 30px 0 0;
