--- a/src/components/charts/tooltip-chart/tooltip-chart-styles.scss
+++ b/src/components/charts/tooltip-chart/tooltip-chart-styles.scss
@@ -54,8 +54,9 @@
 }
 
 .labelIcon {
-  margin-left: -2px;
-  margin-right: 4px;
+  margin-left: -3px;
+  margin-right: 9px;
+  width: 10px;
 }
 
 .labelName {
