Set overflow to visible if calculating rows height dynamically

--- a/src/components/table/table-styles.scss
+++ b/src/components/table/table-styles.scss
@@ -18,6 +18,10 @@
   background-color: $light-gray;
 }
 
+.overflowVisible {
+  overflow: visible !important;
+}
+
 .table :global {
   position: relative;
 
