Fix dynamic row height, change data.json to display example

--- a/src/components/table/table-styles.scss
+++ b/src/components/table/table-styles.scss
@@ -18,8 +18,8 @@
   background-color: $light-gray;
 }
 
-.overflowVisible {
-  overflow: visible !important;
+.allTextVisible {
+  display: inherit !important;
 }
 
 .table :global {
