--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,5 +1,6 @@
 // Font families
 $font-family-1: 'Lato', sans-serif;
+$font-family-2: 'Roboto Mono', sans-serif;
 
 // Font sizes
 $font-size-xs: 0.75rem; // 12px / 16px
