--- a/src/components/dropdown/dropdown-themes.scss
+++ b/src/components/dropdown/dropdown-themes.scss
@@ -1,5 +1,9 @@
 @import '../../styles/theme-settings.scss';
 
+.iconDropdownWrapper {
+  width: 110px;
+}
+
 .dot {
   background-color: $theme-color;
 }
