--- a/src/components/carousel/carousel-styles.scss
+++ b/src/components/carousel/carousel-styles.scss
@@ -2,9 +2,9 @@ $bottom-padding: 16px;
 
 .carouselWrapper {
   font-family: 'Lato', sans-serif;
-  display: flex !important;
-  flex-direction: column-reverse !important;
-  align-content: center !important;
+  display: flex;
+  flex-direction: column-reverse;
+  align-content: center;
 
   :global .cwCarouselPaging {
     display: flex !important;
