Set default opacity of tooltip as 1

--- a/src/components/charts/bubble-chart/bubble-chart-styles.scss
+++ b/src/components/charts/bubble-chart/bubble-chart-styles.scss
@@ -18,6 +18,10 @@
       background-color: $white;
     }
 
+    &.__react_component_tooltip.show {
+      opacity: 1;
+    }
+
     & .multi-line {
       text-align: left;
     }
