--- a/src/components/map-footer/map-footer-styles.scss
+++ b/src/components/map-footer/map-footer-styles.scss
@@ -10,18 +10,15 @@
   color: #8f8fa1;
 }
 
+.buckets {
+  margin: {
+    left: 5px;
+    right: 5px;
+  }
+}
+
 .bucket {
-  width: 10px;
-  height: 10px;
+  width: 14px;
+  height: 14px;
   display: inline-block;
-
-  &:first-child {
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-  }
-
-  &:last-child {
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-  }
 }
