--- a/src/components/carousel/carousel-styles.scss
+++ b/src/components/carousel/carousel-styles.scss
@@ -17,7 +17,6 @@ $bottom-padding: 16px;
     li {
       list-style: none;
       cursor: pointer;
-      padding: 0 30px $bottom-padding;
       border-bottom: 3px solid rgba(10, 25, 65, 0.2);
 
       &:first-child {
@@ -57,6 +56,7 @@ $bottom-padding: 16px;
 
 .pagingTitle {
   position: relative;
+  padding: 0 30px $bottom-padding;
 }
 
 .pagingTitle::after {
@@ -64,7 +64,7 @@ $bottom-padding: 16px;
   width: 100%;
   height: 2px;
   position: absolute;
-  bottom: calc(-#{$bottom-padding} - 2px);
+  bottom: -2px;
   left: 0;
   background-color: transparent;
 }
