Use color variable

--- a/src/components/play-timeline/play-timeline-styles.scss
+++ b/src/components/play-timeline/play-timeline-styles.scss
@@ -59,7 +59,7 @@ $extreme-ticks-correction: 10px;
         height: 12px;
         display: inline-block;
         width: 1px;
-        background-color: black;
+        background-color: $black;
       }
 
       .year {
