Add timeline example and play disabled

--- a/src/components/play-timeline/play-timeline-styles.scss
+++ b/src/components/play-timeline/play-timeline-styles.scss
@@ -60,6 +60,7 @@ $extreme-ticks-correction: 10px;
         display: inline-block;
         width: 1px;
         background-color: $black;
+        transition: left 1s;
       }
 
       .year {
