Fix capitalization of header labels in table component

--- a/src/components/table/table-styles.scss
+++ b/src/components/table/table-styles.scss
@@ -50,6 +50,7 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
+    user-select: none;
   }
 
   .ReactVirtualized__Table__headerColumn,
