--- a/src/components/charts/bubble-chart/bubble-chart-styles.scss
+++ b/src/components/charts/bubble-chart/bubble-chart-styles.scss
@@ -1,33 +1,6 @@
 @import '~styles/settings.scss';
+@import '~styles/react-tooltip-white.scss';
 
 .circle {
   cursor: pointer;
-}
-
-:global {
-  .bubbleChartTooltip {
-    font-family: $font-family-1;
-    padding: 15px;
-    font-size: $font-size-xs;
-    letter-spacing: -0.1px;
-    box-shadow: 0 5px 15px 0 rgba(17, 55, 80, 0.15);
-    max-width: 300px;
-
-    &.__react_component_tooltip.type-dark {
-      color: $theme-color;
-      background-color: $white;
-    }
-
-    &.__react_component_tooltip.show {
-      opacity: 1;
-    }
-
-    & .multi-line {
-      text-align: left;
-    }
-
-    &::after { // Hides the arrow
-      display: none;
-    }
-  }
 }
