--- a/src/components/multi-level-dropdown/multi-level-dropdown-styles.scss
+++ b/src/components/multi-level-dropdown/multi-level-dropdown-styles.scss
@@ -133,6 +133,7 @@ $dd-height: 45px;
   cursor: pointer;
   border: none;
   outline: none;
+  background-color: $white;
 
   .arrow {
     fill: $theme-color;
