--- a/src/components/table/table-styles.scss
+++ b/src/components/table/table-styles.scss
@@ -91,6 +91,7 @@ p {
   .ReactVirtualized__Grid,
   .ReactVirtualized__Table__Grid {
     border-top: solid 1px $theme-color-light;
+    overflow: inherit !important;
 
     &:focus {
       outline: none;
