multiselect components: add tooltip to display info about selected values

--- a/src/components/multiselect/multiselect-styles.scss
+++ b/src/components/multiselect/multiselect-styles.scss
@@ -48,6 +48,7 @@
   z-index: 9;
 
   span {
+    pointer-events: unset;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
