--- a/src/components/multi-level-dropdown/multi-level-dropdown-styles.scss
+++ b/src/components/multi-level-dropdown/multi-level-dropdown-styles.scss
@@ -180,6 +180,10 @@ $dd-height: 45px;
     padding: rem(12px) rem(10px);
     border-bottom: 1px solid $border-color;
     overflow: hidden;
+
+    &.extraIndent {
+      padding-left: rem(20px);
+    }
   }
 
   .infoButton {
@@ -255,4 +259,12 @@ $dd-height: 45px;
     overflow: initial;
     transition: margin-left 0.2s ease-in-out;
   }
+}
+
+.optGroup {
+  color: $theme-color-light;
+  padding: 12px 10px;
+  text-transform: uppercase;
+  font-size: $font-size-s;
+  font-weight: $font-weight-bold;
 }
