Change max-heigh to 300px for dropdown, multiselect and multileveldropdown components

--- a/src/components/multiselect/multiselect-styles.scss
+++ b/src/components/multiselect/multiselect-styles.scss
@@ -65,6 +65,7 @@
   position: relative;
 
   .dropdown-menu {
+    max-height: 300px !important;
     .option-wrapper {
       padding: 12px 10px;
       position: relative;
