--- a/src/components/table/table-theme.scss
+++ b/src/components/table/table-theme.scss
@@ -16,7 +16,7 @@
 .evenRow {
   .column {
     &:nth-child(2) {
-      background-color: #E7EDF8;
+      background-color: #e7edf8;
     }
   }
 }
@@ -24,7 +24,7 @@
 .oddRow {
   .column {
     &:nth-child(2) {
-      background-color: #D4DFF4;
+      background-color: #d4dff4;
     }
   }
 }
